--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <h2 align="center">Dog Food</h2>
             <div class="food-list">
                 <div class="food-item">
-                    <img src="pedigree.jpg" alt="Premium Dry Food">
+                    <img src="Pedigree.jpg" alt="Premium Dry Food">
                     <h3>Pedigree</h3>
                     <p>Rs 300/- onwards</p>
                 </div>
