--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                 
                  <div class="breed-item">
-                    <img src="Pitbull.jpg" alt="Pitbull">
+                    <img src="pitbull.jpg" alt="Pitbull">
                     <h3>Pitbull</h3>
                     <p>Rs 30,000</p>
                 </div>
@@ -227,7 +227,7 @@
 
                 
                  <div class="breed-item">
-                    <img src="Dachshund.jpg" alt="Dachshund">
+                    <img src="dachshund.jpg" alt="Dachshund">
                     <h3>Dachshund</h3>
                     <p>Rs 25,000</p>
                 </div>
@@ -254,7 +254,7 @@
                     <p>Rs 300/- onwards</p>
                 </div>
                 <div class="food-item">
-                    <img src="pedigreepro.jpg" alt="Organic Wet Food">
+                    <img src="Pedigreepro.jpg" alt="Organic Wet Food">
                     <h3>Pedigree Pro</h3>
                     <p>Rs 439/- onwards</p>
                 </div>
@@ -264,7 +264,7 @@
                     <p>Rs 40/- onwards</p>
                 </div>
                 <div class="food-item">
-                    <img src="royalcanin.jpg" alt="Grain-Free Food">
+                    <img src="Royalcanin.jpg" alt="Grain-Free Food">
                     <h3>Royal Canin Puppy </h3>
                     <p>Rs 1000/- onwards</p>
                 </div>
