--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <li><a href="#kennels">Kennels</a></li>
                 <li><a href="#reviews">Reviews</a></li>
                 <li><a href="#contact">Contact Us</a></li>
+
+                <hr size="10px" color="yellow">
+                
             </ul>
         </nav>
         <div class="hero">
