Updatedd index.html
Signed-off-by: Irfandragonshepherd123 <dragonshepherd45@gmail.com>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="hero">
             <h1>Welcome to Dragon Shepherd Kennel and Pet Shop</h1>
             <p>Your one-stop shop for the best pets and pet supplies!</p>
-            <a href="https://wa.me/yourwhatsappnumber" class="whatsapp-button">Order on WhatsApp</a>
+            <a href="https://wa.me/+916001510852" class="whatsapp-button">Order on WhatsApp</a>
         </div>
     </header>
 
@@ -436,7 +436,7 @@
 
     <div class="hero">
 
-        <a href="" class="facebook-button" target="_blank" aria-label="Visit our Facebook Page">
+        <a href="https://www.facebook.com/profile.php?id=100083018687993" class="facebook-button" target="_blank" aria-label="Visit our Facebook Page">
     <!-- Facebook SVG Icon -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
         <path d="M22.675 0H1.325C.594 0 0 .594 0 1.325v21.351C0 23.406.594 24 1.325 24H12v-9.294H9.557V11.5h2.443V9.1c0-2.418 1.48-3.737 3.63-3.737 1.028 0 1.912.077 2.17.112v2.52h-1.491c-1.17 0-1.396.557-1.396 1.376v1.788h2.797l-.365 2.206h-2.432V24h4.77c.73 0 1.325-.594 1.325-1.325V1.325C24 .594 23.406 0 22.675 0z"/>
