Updatedddd index.html
Signed-off-by: Irfandragonshepherd123 <dragonshepherd45@gmail.com>

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <nav>
             <ul>
                 
-                <li><button href="#home">Home</button></li>
-                <li><button href="#breeds">Dog Breeds</button></li>
-                <li><button href="#food">Dog Food</button></li>
-                <li><button href="#medicine">Dog Medicine</a></li>
-                <li><button href="#accessories">Accessories</button></li>
-                <li><button href="#kennels">Kennels</button></li>
-                <li><button href="#reviews">Reviews</button></li>
-                <li><button href="#contact">Contact Us</button></li>
+                <li><a href="#home"><button>Home</button></a></li>
+                <li><a href="#breeds"><button>Dog Breeds</button></a></li>
+                <li><a href="#food"><button>Dog Food</button></a></li>
+                <li><a href="#medicine"><button>Dog Medicine</button></a></li>
+                <li><a href="#accessories"><button>Accessories</button></a></li>
+                <li><a href="#kennels"><button>Kennels</button></a></li>
+                <li><a href="#reviews"><button>Reviews</button></a></li>
+                <li><a href="#contact"><button>Contact Us</button></a></li>
                 
                 <hr size="10px" color="yellow">
             </ul>
@@ -186,7 +186,7 @@
                 <div class="breed-item">
                     <img src="ChowChow.jpg" alt="ChowChow">
                     <h3>ChowChow</h3>
-                    <p>Rs 3,000</p>
+                    <p>Rs 27,000</p>
                 </div>
 
 
@@ -245,7 +245,7 @@
                  <div class="breed-item">
                     <img src="Chihuahua.jpg" alt="Chihuahua">
                     <h3>Chihuahua</h3>
-                    <p>Rs 7,000</p>
+                    <p>Rs 45,000</p>
                 </div>
 
 
@@ -444,7 +444,7 @@
 
     <div class="hero">
 
-        <a href="" class="facebook-button" target="_blank" aria-label="Visit our Facebook Page">
+        <a href="https://www.facebook.com/profile.php?id=100083018687993" class="facebook-button" target="_blank" aria-label="Visit our Facebook Page">
     <!-- Facebook SVG Icon -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
         <path d="M22.675 0H1.325C.594 0 0 .594 0 1.325v21.351C0 23.406.594 24 1.325 24H12v-9.294H9.557V11.5h2.443V9.1c0-2.418 1.48-3.737 3.63-3.737 1.028 0 1.912.077 2.17.112v2.52h-1.491c-1.17 0-1.396.557-1.396 1.376v1.788h2.797l-.365 2.206h-2.432V24h4.77c.73 0 1.325-.594 1.325-1.325V1.325C24 .594 23.406 0 22.675 0z"/>
@@ -497,4 +497,5 @@
     </footer>
 </body>
 </html>
+
 
