--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <p>Rs 40/- onwards</p>
                 </div>
                 <div class="food-item">
-                    <img src="royalcanin.jpg" alt="Grain-Free Food">
+                    <img src="Royalcanin.jpg" alt="Grain-Free Food">
                     <h3>Royal Canin Puppy </h3>
                     <p>Rs 1000/- onwards</p>
                 </div>
