--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 
                 
                  <div class="breed-item">
-                    <img src="Pitbull.jpg" alt="Pitbull">
-                    <h3>pitbull</h3>
+                    <img src="pitbull.jpg" alt="Pitbull">
+                    <h3>Pitbull</h3>
                     <p>Rs 30,000</p>
                 </div>
 
@@ -236,8 +236,8 @@
 
                 
                  <div class="breed-item">
-                    <img src="Dachshund.jpg" alt="Dachshund">
-                    <h3>dachshund</h3>
+                    <img src="dachshund.jpg" alt="Dachshund">
+                    <h3>Dachshund</h3>
                     <p>Rs 25,000</p>
                 </div>
 
@@ -263,7 +263,7 @@
                     <p>Rs 300/- onwards</p>
                 </div>
                 <div class="food-item">
-                    <img src="Pedigreepro.jpg" alt="Organic Wet Food">
+                    <img src="pedigreepro.jpg" alt="Organic Wet Food">
                     <h3>Pedigree Pro</h3>
                     <p>Rs 439/- onwards</p>
                 </div>
